--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/12.0.1/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script src="script_v3.js"></script>
+    <script type="module" src="./script_v3.js"></script>
+
 </body>
 
 </html>
