Update copyright year in footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy;2021-2025 Drackyjr. All rights reserved.</p>
+            <p>&copy;2026 Drackyjr. All rights reserved.</p>
         </div>
     </footer>
 
