--- a/about.html
+++ b/about.html
@@ -35,9 +35,10 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2021-2025 Drackyjr. All rights reserved.</p>
+            <p>&copy; 2026 Drackyjr. All rights reserved.</p>
         </div>
     </footer>
 </body>
+
 
 </html>
