--- a/about.html
+++ b/about.html
@@ -22,12 +22,7 @@
         <button class="back-button" onclick="window.location.href='index.html'">&larr; Back to Home</button>
         <section class="page-section">
             <h1 class="page-title">About Us</h1>
-            <p>I’m Dracky
-                ,this page is a collection of my writeups practical explorations of real-world vulnerabilities, CTF
-                challenges and security mechanisms.
-
-                Each post reflects hands-on investigation, exploitation paths, and the defense logic behind them.
-                My goal is simple: understand how systems break, so they can be built stronger.</p>
+            <p>A technical blog focused on practical cybersecurity, blockchain security and hands-on research.</p>
             <p><a href="https://discordapp.com/users/886128141494517810" target="_blank">D1sC0rd= drackyjr</a></p>
             <p><a href="https://tryhackme.com/p/dracky4u" target="_blank">TryHackMe= dracky4u</a></p>
         </section>
@@ -42,3 +37,4 @@
 
 
 </html>
+
